# reminder-calendar

./: Dockerfile  README.md  docker-compose.yml
server/: Cargo.toml  data.json  data.json.backup
server/src/: main.rs
website/: Cargo.toml  Trunk.toml  index.html  styles.css
website/src/: consts.rs  form.rs  main.rs  monthlist.rs  remainder.rs  reminder.rs
