[package]
name = "billcalendar"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-net = "0.6.0"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
wasm-bindgen-futures = "0.4.43"
wasm-logger = "0.2.0"
log = "0.4.22"
web-sys = "0.3.70"
wasm-bindgen = "0.2.93"
yew-router = { git = "https://github.com/yewstack/yew.git" }
